Transaction flags applied in instrument-edition and upload documents and certificates emission tabs

--- a/src/app/views/instrument-edition/instrument-edition.component.html
+++ b/src/app/views/instrument-edition/instrument-edition.component.html
@@ -1,3 +1,6 @@
-<emp-land-instrument-header [transactionUID]="transactionUID" [instrument]="instrument">
+<emp-land-instrument-header
+  [transactionUID]="transactionUID"
+  [instrument]="instrument"
+  [canEdit]="canEdit">
 
 </emp-land-instrument-header>
