Print payment order

--- a/src/app/views/transactions/transaction-editor/transaction-editor.component.html
+++ b/src/app/views/transactions/transaction-editor/transaction-editor.component.html
@@ -58,3 +58,9 @@
   </div>
 
 </ng-container>
+
+<emp-ng-file-print-preview #filePrintPreview
+  title="Impresión de orden de pago"
+  [hint]="transaction.transactionID">
+
+</emp-ng-file-print-preview>
