--- a/src/app/views/transactions/transaction-tabbed-view/transaction-tabbed-view.component.html
+++ b/src/app/views/transactions/transaction-tabbed-view/transaction-tabbed-view.component.html
@@ -15,7 +15,9 @@
 
   <mat-tab label="Digitalización" *ngIf="transaction.actions.show.preprocessingTab">
     <ng-template matTabContent>
+      <emp-land-preprocessing>
 
+      </emp-land-preprocessing>
     </ng-template>
   </mat-tab>
 
