--- a/src/app/views/transactions/preprocessing/preprocessing.component.html
+++ b/src/app/views/transactions/preprocessing/preprocessing.component.html
@@ -1,3 +1,5 @@
-<emp-land-instrument-files-editor [instrumentDescriptor]="'Escritura publica'">
+<emp-land-instrument-files-editor
+[instrumentDescriptor]="'Escritura pública mock'"
+(instrumentFilesEditorEvent)="onInstrumentFilesEditorEvent($event)">
 
 </emp-land-instrument-files-editor>
